--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="click_btn">
             <h3>今すぐ探したい方はこちら</h3>
-            <a  href = "/calc">居酒屋を探す▼</a>
+            <a  href = "/calc">▸ 居酒屋を探す</a>
         </div>
     </section >
     <section  class="concept" id="concept">
@@ -195,7 +195,7 @@
     <section  class="page_move" id="page_move">
         <h1>ぜひ使ってみてください</h1>
         <div class="click_btn">
-            <a  href = "/calc">居酒屋を探す▼</a>
+            <a  href = "/calc">▸ 居酒屋を探す</a>
         </div>
     </section >
 </main>
