--- a/templates/calculation.html
+++ b/templates/calculation.html
@@ -117,7 +117,7 @@
             </div>
         </section>
         <div class="click_btn">
-            <input type="submit" value='お店を見つける'>
+            <input type="submit" value='お店を見つける ▸'>
         </div>
     </form>
 </main>
