--- a/templates/result.html
+++ b/templates/result.html
@@ -18,19 +18,19 @@
     {% if output["pickup_count"] != 0 %}
     <div class="result_btn3" >
       <form action="/result_less" method="POST">
-        <button onclick="handleBack()">前のページに戻る</button>
+        <button onclick="handleBack()">◂ 前のページに戻る</button>
       </form>
     </div>
     {% else %}
     <div class="result_btn3" >
-      <a href="/calc">前のページに戻る</a>
+      <a href="/calc">◂ 前のページに戻る</a>
     </div>  
     {% endif %} 
     <div class="result_btn3" >
       <a href="{{output["link_url"][0]}}" target="_blank">食べログを見る</a>
     </div>
     <div class="result_btn3" >
-      <a href="/result#result2" class="jump_point">次の候補を見る</a>
+      <a href="/result#result2" class="jump_point">次の候補を見る ▸</a>
     </div>
   </div>
   {% endif %}
@@ -49,13 +49,13 @@
   </div>
   <div class="result_navi" >
     <div class="result_btn3" >
-      <a href="/result#result1" class="jump_point">前の候補に戻る</a>
+      <a href="/result#result1" class="jump_point">◂ 前の候補に戻る</a>
     </div>
     <div class="result_btn3" >
       <a href="{{output["link_url"][1]}}" target="_blank">食べログを見る</a>
     </div>
     <div class="result_btn3" >
-      <a href="/result#result3" class="jump_point">次の候補を見る</a>
+      <a href="/result#result3" class="jump_point">次の候補を見る ▸</a>
     </div>
   </div>
   {% endif %}
@@ -73,13 +73,13 @@
   </div>
   <div class="result_navi">
     <div class="result_btn3" >
-      <a href="/result#result2" class="jump_point">前の候補に戻る</a>
+      <a href="/result#result2" class="jump_point">◂ 前の候補に戻る</a>
     </div>
     <div class="result_btn3" >
       <a href="{{output["link_url"][2]}}" target="_blank">食べログを見る</a>
     </div>
     <div class="result_btn3" >
-      <a href="/result#result4" class="jump_point">次の候補を見る</a>
+      <a href="/result#result4" class="jump_point">次の候補を見る ▸</a>
     </div>
   </div>
   {% endif %}
@@ -97,13 +97,13 @@
   </div>
   <div class="result_navi">
     <div class="result_btn3" >
-      <a href="/result#result3" class="jump_point">前の候補に戻る</a>
+      <a href="/result#result3" class="jump_point">◂ 前の候補に戻る</a>
     </div>
     <div class="result_btn3" >
       <a href="{{output["link_url"][3]}}" target="_blank">食べログを見る</a>
     </div>
     <div class="result_btn3" >
-      <a href="/result#result5" class="jump_point">次の候補を見る</a>
+      <a href="/result#result5" class="jump_point">次の候補を見る ▸</a>
     </div>
   </div>
   {% endif %}
@@ -121,13 +121,13 @@
   </div>
   <div class="result_navi">
     <div class="result_btn3" >
-      <a href="/result#result4" class="jump_point">前の候補に戻る</a>
+      <a href="/result#result4" class="jump_point">◂ 前の候補に戻る</a>
     </div>
     <div class="result_btn3" >
       <a href="{{output["link_url"][4]}}" target="_blank">食べログを見る</a>
     </div>
     <div class="result_btn3" >
-      <a href="/result#result6" class="jump_point">次の候補を見る</a>
+      <a href="/result#result6" class="jump_point">次の候補を見る ▸</a>
     </div>
   </div>
   {% endif %}
@@ -143,13 +143,13 @@
   </div>
   <div class="result_navi">
     <div class="result_btn3" >
-      <a href="/result#result5" class="jump_point">前の候補に戻る</a>
+      <a href="/result#result5" class="jump_point">◂ 前の候補に戻る</a>
     </div>
     <div class="result_btn3" >
       <a href="{{output["link_url"][5]}}" target="_blank">食べログを見る</a>
     </div>
     <div class="result_btn3" >
-      <a href="/result#result7" class="jump_point">次の候補を見る</a>
+      <a href="/result#result7" class="jump_point">次の候補を見る ▸</a>
     </div>
   </div>
   {% endif %}
@@ -165,13 +165,13 @@
   </div>
   <div class="result_navi">
     <div class="result_btn3" >
-      <a href="/result#result6" class="jump_point">前の候補に戻る</a>
+      <a href="/result#result6" class="jump_point">◂ 前の候補に戻る</a>
     </div>
     <div class="result_btn3" >
       <a href="{{output["link_url"][6]}}" target="_blank">食べログを見る</a>
     </div>
     <div class="result_btn3" >
-      <a href="/result#result8" class="jump_point">次の候補を見る</a>
+      <a href="/result#result8" class="jump_point">次の候補を見る ▸</a>
     </div>
   </div>
   {% endif %}
@@ -187,13 +187,13 @@
   </div>
   <div class="result_navi">
     <div class="result_btn3" >
-      <a href="/result#result7" class="jump_point">前の候補に戻る</a>
+      <a href="/result#result7" class="jump_point">◂ 前の候補に戻る</a>
     </div>
     <div class="result_btn3" >
       <a href="{{output["link_url"][7]}}" target="_blank">食べログを見る</a>
     </div>
     <div class="result_btn3" >
-      <a href="/result#result9" class="jump_point">次の候補を見る</a>
+      <a href="/result#result9" class="jump_point">次の候補を見る ▸</a>
     </div>
   </div>
   {% endif %}
@@ -209,13 +209,13 @@
   </div>
   <div class="result_navi">
     <div class="result_btn3" >
-      <a href="/result#result8" class="jump_point">前の候補に戻る</a>
+      <a href="/result#result8" class="jump_point">◂ 前の候補に戻る</a>
     </div>
     <div class="result_btn3" >
       <a href="{{output["link_url"][8]}}" target="_blank">食べログを見る</a>
     </div>
     <div class="result_btn3" >
-      <a href="/result#result10" class="jump_point">次の候補を見る</a>
+      <a href="/result#result10" class="jump_point">次の候補を見る ▸</a>
     </div>
   </div>
   {% endif %}
@@ -231,7 +231,7 @@
   </div>
   <div class="result_navi">
     <div class="result_btn3" >
-      <a href="/result#result9" class="jump_point">前の候補に戻る</a>
+      <a href="/result#result9" class="jump_point">◂ 前の候補に戻る</a>
     </div>
     <div class="result_btn3" >
       <a href="{{output["link_url"][9]}}" target="_blank">食べログを見る</a>
@@ -248,22 +248,22 @@
     {% if output["pickup_count"] != 0 %}
     <div class="result_btn2" >
       <form action="/result_less" method="POST">
-        <button onclick="handleBack()">前のページに戻る</button>
+        <button onclick="handleBack()">◂ 前のページに戻る</button>
       </form>
     </div>
     {% else %}
     <div class="result_btn2" >
-      <a href="/calc">前のページに戻る</a>
+      <a href="/calc">◂ 前のページに戻る</a>
     </div>  
     {% endif %} 
     <div class="result_btn2" >
-      <form action="/result_more" method="POST">
-        <button onclick="handleClick()">次のページを見る</button>
-      </form>
-    </div>   
-    <div class="result_btn2" >
       <a href="/calc">重要度を編集</a>
     </div>
+    <div class="result_btn2" >
+      <form action="/result_more" method="POST">
+        <button onclick="handleClick()">次のページを見る ▸</button>
+      </form>
+    </div>   
   </section>
 
 </main>
