--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,6 +25,7 @@
             document.getElementById('count').textContent = count;
         }
     </script>
+    <meta name="google-site-verification" content="0-r3tbR5y19T3LUcLhUzobmAMOkF39Ts2UMaVLPQ8ys" />
 </head>
 <body>
     <header>
