--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
     <!-- ファビコンの設定 -->
     <link rel="icon" href="../static/images/logo_icon.ico">
 
-    <title>居酒屋NAVI</title>
+    <title>居酒屋NAVI 福岡の居酒屋探しを時短します</title>
     <script>
         async function handleClick() {
             const response = await fetch('/result_more');
