--- a/templates/calculation.html
+++ b/templates/calculation.html
@@ -1,4 +1,4 @@
-<!----------------問題２-------------->
+
 {% extends "layout.html" %}
 {% block content %}
 <main>
@@ -117,7 +117,7 @@
             </div>
         </section>
         <div class="click_btn">
-            <input type="submit" value='お店を見つける ▸'>
+            <input type="submit" value='お店を見つける'>
         </div>
     </form>
 </main>
