--- a/templates/index.html
+++ b/templates/index.html
@@ -38,21 +38,30 @@
         <div class="navi_tytle">
             <img src="../static/images/concept2.png" alt="">
         </div>
+        <div class="smartphone_title"><h2><span>楽で、</span><span>正確な、</span><span>居酒屋探しを</span><span>福岡から</span></h2></div>
         <div class="content_wrapper">
             <div class="content_back"></div>
             <div class="content_wrapper2">
                 <div class="content_text">
                     <div class="content_text2">
                         <h2><span>楽で、</span><span>正確な、</span><span>居酒屋探しを</span><span>福岡から</span></h2>
+                        <div class="baroon">
+                            <p>
+                                <span>会社の飲み会の幹事を任されたけど、</span><span>忙しから時間が取れない</span>
+                            </p>
+                        </div>
+                        <div class="baroon">
+                            <p>
+                                <span>サークルの歓迎会で</span>
+                                <span>様々な意見を踏まえて店を選びたい</span>
+                            </p>
+                        </div>
+                        <div class="baroon">
+                            <p>
+                                <span class="bold">時間はないけど実際に評価されている店を</span><span class="bold">選びたい</span>
+                            </p>
+                        </div>
                         <p>
-                            <span>「会社の飲み会の幹事を任されたけど、</span>
-                            <span>　忙しから時間が取れない」</span>
-                            <br>
-                            <span>「サークルの歓迎会で</span>
-                            <span>　様々な意見を踏まえて店を選びたい」</span>
-                            <br>
-                            <span class="bold">「時間はないけど実際に評価されている店を</span><span class="bold">　選びたい」</span>
-                            <br>
                             <span>そんな時に使えるサービスが欲しくて</span>
                             <span>このサイトを作りました。</span>
                         </p>
@@ -79,7 +88,7 @@
         </div>
         <div class="content_wrapper_invert">
             <div class="content_back_invert"></div>
-            <div class="content_wrapper2">
+            <div class="content_wrapper2_invert">
                 <div class="content_pictures">
                     <div class="content_picture"><img src="../static/images/about_image2.webp" alt=""></div>
                     <div class="content_picture"><img src="../static/images/about_image1.jpg" alt=""></div>
