--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="baroon">
                             <p>
-                                <span class="bold">時間はないけど実際に評価されている店を</span><span class="bold">選びたい</span>
+                                <span>時間はないけど</span><span>実際に</span></span>評価されている店を</span><span>選びたい</span>
                             </p>
                         </div>
                         <p>
@@ -70,6 +70,8 @@
                             <span>口コミに投稿された、”リアルな情報”を</span>
                             <span>解析することで、信頼性の高い指標を作成</span>
                             <span>しました。</span>
+                        </p>
+                        <p>
                             <span>それらの指標を基に目的に合わせて</span>
                             <span>居酒屋を選べます。</span>
                         </p>
