--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,6 +68,11 @@ a ,button {
 span {
   display: inline-block;
 }
+@media (max-width: 480px){
+  span {
+    display: inline;
+  }
+}
 
 .fontred {
   color: #fc6262;
@@ -248,10 +253,10 @@ topの設定
 }
 
 .click_btn a:hover {
-  background-color: rgb(255, 217, 217);
+  background: linear-gradient(90deg, rgb(255, 231, 217), rgb(255, 196, 196));
 }
 .click_btn input:hover {
-  background-color: rgb(255, 217, 217);
+  background: linear-gradient(90deg, rgb(255, 231, 217), rgb(255, 196, 196));
 }
 .click_btn h3 {
   margin-bottom: 50px;
@@ -265,23 +270,25 @@ topの設定
     width: 80vw;
     border-bottom: 0;
     border-top: 0;
+    border-radius: 100vh;
   }
   .click_btn h3 {
     margin-bottom: 10px;
+    font-size: 1.0em;
   }
   .click_btn a {
     width: 80vw;
-    background-color: rgb(255, 217, 217);
-    box-shadow: 0px 10px 16px 0px rgba(0, 0, 0, .3),
-    0px 5px 10px rgba(255,255,255,0.75) inset;
+    background: linear-gradient(90deg, rgb(255, 231, 217), rgb(255, 196, 196));
+    border-radius: 100vh;
     border-bottom: 0;
     border-top: 0;
+    font-size: 1.3em;
   }
   .click_btn a:hover {
-    background-color: rgb(255, 217, 217)
+    background: linear-gradient(90deg, rgb(255, 231, 217), rgb(255, 196, 196));
   }
   .click_btn input:hover {
-    background-color: rgb(255, 217, 217)
+    background: linear-gradient(90deg, rgb(255, 231, 217), rgb(255, 196, 196));
   }
 }
 
@@ -329,7 +336,7 @@ conceptの設定
   right: 0;
   width: 92.5%;
   height: 75%;
-  background-color: #f7e7e7;
+  background: linear-gradient(180deg, rgb(250, 207, 207) ,#f7e7e7 );
   margin-top: -35px;
   z-index: -1;
 }
@@ -379,7 +386,7 @@ conceptの設定
   max-width: 100%;
   font-size: 16px;
   background: #FFF;
-  border: solid 3px #555;
+  border: solid 3px #000;
   box-sizing: border-box;
   border-radius: 10px;
 }
@@ -401,7 +408,7 @@ conceptの設定
   left: 50%;
   margin-left: -17px;
   border: 14px solid transparent;
-  border-top: 14px solid #555;
+  border-top: 14px solid #000;
   z-index: 1;
 }
 .smartphone_title {
@@ -446,10 +453,13 @@ conceptの設定
     z-index: 5;
     width: 90%;
     height: 100%;
-    text-align: center;
+    text-align: left;
     overflow: hidden;
     margin: auto 5vw;
     /* background-color: aqua; */
+  }
+  .baroon {
+    text-align: center;
   }
   .content_text h2 {
     display: none;
@@ -519,7 +529,7 @@ aboutAIの設定
   top: 0;
   width: 92.5%;
   height: 75%;
-  background-color: #f7e7e7;
+  background: linear-gradient(180deg, rgb(250, 207, 207) ,#f7e7e7 );
   margin-top: -35px;
   z-index: -1;
 }
@@ -592,7 +602,7 @@ functionの設定
   top: 25%;
   width: 100%;
   height: 60%;
-  background-color: #f7e7e7;
+  background: linear-gradient(180deg, rgb(250, 207, 207) ,#f7e7e7 );
   z-index: 1;
 }
 .functions{
@@ -751,11 +761,15 @@ functionの設定
   }
   .function_text{
     z-index: 5;
-    width: 70vw;
+    width: 65vw;
     margin: 0 auto;
-    text-align: center;
+    text-align: left;
     margin: auto;
+    margin-left: 10px;
     /* background-color: aqua; */
+  }
+  br {
+    display: none;
   }
 }
 
