--- a/static/css/style.css
+++ b/static/css/style.css
@@ -336,7 +336,7 @@ conceptの設定
   right: 0;
   width: 92.5%;
   height: 75%;
-  background: linear-gradient(180deg, rgb(250, 207, 207) ,#f7e7e7 );
+  background: linear-gradient(180deg, rgb(250, 207, 207) ,#fff);
   margin-top: -35px;
   z-index: -1;
 }
@@ -354,7 +354,7 @@ conceptの設定
     right: 0;
     width: 100%;
     height: 95%;
-    background-color: #f7e7e7;
+    background: linear-gradient(180deg, rgb(250, 207, 207) ,#fff);
     margin-top: 0%;
     z-index: -1;
   }
@@ -529,7 +529,7 @@ aboutAIの設定
   top: 0;
   width: 92.5%;
   height: 75%;
-  background: linear-gradient(180deg, rgb(250, 207, 207) ,#f7e7e7 );
+  background: linear-gradient(180deg, rgb(250, 207, 207) ,#fff);
   margin-top: -35px;
   z-index: -1;
 }
@@ -568,7 +568,7 @@ aboutAIの設定
     right: 0;
     width: 100%;
     height: 85%;
-    background-color: #f7e7e7;
+    background: linear-gradient(180deg, rgb(250, 207, 207) ,#fff);
     margin-top: 10%;
     z-index: -1;
   }
@@ -602,7 +602,7 @@ functionの設定
   top: 25%;
   width: 100%;
   height: 60%;
-  background: linear-gradient(180deg, rgb(250, 207, 207) ,#f7e7e7 );
+  background: linear-gradient(180deg, rgb(250, 207, 207) ,#fff);
   z-index: 1;
 }
 .functions{
@@ -804,7 +804,7 @@ functionの設定
   justify-content: center;
   width: 60vw;
   max-width: 800px;
-  background-color: #f7e7e7;
+  background: linear-gradient(270deg, rgb(250, 207, 207) ,#fff);
   border-radius: 5px; /*バーの端の丸み*/ 
 }
 .calc_img {
@@ -827,6 +827,43 @@ functionの設定
 .calc_func h3{
   display: inline-block;
   /* padding-bottom: 20px; */
+}
+
+@media (max-width:480px) {
+  .calc_wrapper h2{
+    display: block;
+    padding-top: 10px;
+  }
+  .calc_item {
+    margin: 0 auto 20px auto;
+    display: flex;
+    flex-direction: column;
+    width: 90vw;
+    max-width: 800px;
+    background: linear-gradient(270deg, rgb(250, 207, 207) ,#ffebeb);
+    border-radius: 5px; /*バーの端の丸み*/ 
+  }
+  .calc_img {
+    width: 100%;
+    height: 100px;
+  }
+  .calc_img img{
+    border-radius: 5px; /*バーの端の丸み*/ 
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin: auto;
+    display: block;
+  }
+  .calc_func {
+    width: 100%;
+    text-align:center;
+    padding:0 10px;
+  }
+  .calc_func h3{
+    display: inline-block;
+    /* padding-bottom: 20px; */
+  }
 }
 /*　******************レンジスライサー******************/
 .input-range {
@@ -851,7 +888,7 @@ functionの設定
     border-radius: 40%; /*円形に*/ 
     box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15); /*影*/ 
   }
-  /**/ -moz-向けのつまみ
+  /*-moz-向けのつまみ*/ 
   &::-moz-range-thumb {
     background: #fc6262; /*背景色*/ 
     width: 24px; /*幅*/ 
@@ -958,6 +995,8 @@ select {
 .cp_sl06:focus ~ .cp_sl06_selectbar:after {
   width: 50%;
 }
+
+
 /*　******************選択肢******************/
 
 /* ****************************
