--- a/templates/result.html
+++ b/templates/result.html
@@ -4,7 +4,7 @@
   {% if output["len"]-output["pickup_count"] >=1 %}
   <div class="result_item" id="result1">
     <div class="result_name">
-      <h2><span>あなたの気分に<span id="count">{{ output["pickup_count"]+1 }}</span>番目に近いのは</span><span class="bold">「{{output["store_name"][0]}}」</span></h2>
+      <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+1 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][0]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][0]}}" target="_blank">
       <img src="{{output["picture_url"][0]}}" alt="">
@@ -37,7 +37,7 @@
   {% if output["len"]-output["pickup_count"] >=2 %}
   <div class="result_item" id="result2">
     <div class="result_name">
-      <h2><span>あなたの気分に<span id="count">{{ output["pickup_count"]+2 }}</span>番目に近いのは</span><span class="bold">「{{output["store_name"][1]}}」</span></h2>
+      <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+2 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][1]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][1]}}" target="_blank">
       <img src="{{output["picture_url"][1]}}" alt="">
@@ -62,7 +62,7 @@
   {% if output["len"]-output["pickup_count"] >=3 %}
   <div class="result_item" id="result3">
     <div class="result_name">
-      <h2><span>あなたの気分に<span id="count">{{ output["pickup_count"]+3 }}</span>番目に近いのは</span><span class="bold">「{{output["store_name"][2]}}」</span></h2>
+      <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+3 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][2]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][2]}}" target="_blank">
       <img src="{{output["picture_url"][2]}}" alt="">
@@ -86,7 +86,7 @@
   {% if output["len"]-output["pickup_count"] >=4 %}
   <div class="result_item" id="result4">
     <div class="result_name">
-      <h2><span>あなたの気分に<span id="count">{{ output["pickup_count"]+4 }}</span>番目に近いのは</span><span class="bold">「{{output["store_name"][3]}}」</span></h2>
+      <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+4 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][3]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][3]}}" target="_blank">
       <img src="{{output["picture_url"][3]}}" alt="">
@@ -110,7 +110,7 @@
   {% if output["len"]-output["pickup_count"] >=5 %}
   <div class="result_item" id="result5">
     <div class="result_name">
-      <h2><span>あなたの気分に<span id="count">{{ output["pickup_count"]+5 }}</span>番目に近いのは</span><span class="bold">「{{output["store_name"][4]}}」</span></h2>
+      <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+5 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][4]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][4]}}" target="_blank">
       <img src="{{output["picture_url"][4]}}" alt="">
@@ -134,7 +134,7 @@
   {% if output["len"]-output["pickup_count"] >=6 %}
   <div class="result_item" id="result6">
     <div class="result_name">
-      <h2><span>あなたの気分に<span id="count">{{ output["pickup_count"]+6 }}</span>番目に近いのは</span><span class="bold">「{{output["store_name"][5]}}」</span></h2>
+      <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+6 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][5]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][5]}}" target="_blank">
       <img src="{{output["picture_url"][5]}}" alt="">
@@ -156,7 +156,7 @@
   {% if output["len"]-output["pickup_count"] >=7 %}
   <div class="result_item" id="result7">
     <div class="result_name">
-      <h2><span>あなたの気分に<span id="count">{{ output["pickup_count"]+7 }}</span>番目に近いのは</span><span class="bold">「{{output["store_name"][6]}}」</span></h2>
+      <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+7 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][6]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][6]}}" target="_blank">
       <img src="{{output["picture_url"][6]}}" alt="">
@@ -178,7 +178,7 @@
   {% if output["len"]-output["pickup_count"] >=8 %}
   <div class="result_item" id="result8">
     <div class="result_name">
-      <h2><span>あなたの気分に<span id="count">{{ output["pickup_count"]+8 }}</span>番目に近いのは</span><span class="bold">「{{output["store_name"][7]}}」</span></h2>
+      <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+8 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][7]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][7]}}" target="_blank">
       <img src="{{output["picture_url"][7]}}" alt="">
@@ -200,7 +200,7 @@
   {% if output["len"]-output["pickup_count"] >=9 %}
   <div class="result_item" id="result9">
     <div class="result_name">
-      <h2><span>あなたの気分に<span id="count">{{ output["pickup_count"]+9 }}</span>番目に近いのは</span><span class="bold">「{{output["store_name"][8]}}」</span></h2>
+      <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+9 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][8]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][8]}}" target="_blank">
       <img src="{{output["picture_url"][8]}}" alt="">
@@ -222,7 +222,7 @@
   {% if output["len"]-output["pickup_count"] >=10 %}
   <div class="result_item" id="result10">
     <div class="result_name">
-      <h2><span>あなたの気分に<span id="count">{{ output["pickup_count"]+10 }}</span>番目に近いのは</span><span class="bold">「{{output["store_name"][9]}}」</span></h2>
+      <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+10 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][9]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][9]}}" target="_blank">
       <img src="{{output["picture_url"][9]}}" alt="">
@@ -248,12 +248,12 @@
     {% if output["pickup_count"] != 0 %}
     <div class="result_btn2" >
       <form action="/result_less" method="POST">
-        <button onclick="handleBack()">◂ 前のページに戻る</button>
+        <button onclick="handleBack()">◂ 前のページ<span>に戻る</span></button>
       </form>
     </div>
     {% else %}
     <div class="result_btn2" >
-      <a href="/calc">◂ 前のページに戻る</a>
+      <a href="/calc">◂ 前のページ<span>に戻る</span></a>
     </div>  
     {% endif %} 
     <div class="result_btn2" >
@@ -261,7 +261,7 @@
     </div>
     <div class="result_btn2" >
       <form action="/result_more" method="POST">
-        <button onclick="handleClick()">次のページを見る ▸</button>
+        <button onclick="handleClick()">次のページ<span>を見る</span> ▸</button>
       </form>
     </div>   
   </section>
