--- a/static/css/style.css
+++ b/static/css/style.css
@@ -390,8 +390,8 @@ conceptの設定
   min-width: 120px;
   max-width: 100%;
   font-size: 16px;
-  background: #FFF;
-  border: solid 3px #000;
+  background: #fff;
+  border:3px solid #fff; 
   box-sizing: border-box;
   border-radius: 10px;
 }
@@ -413,7 +413,7 @@ conceptの設定
   left: 50%;
   margin-left: -17px;
   border: 14px solid transparent;
-  border-top: 14px solid #000;
+  border-top: 14px solid #fff;
   z-index: 1;
 }
 .smartphone_title {
