--- a/templates/calculation.html
+++ b/templates/calculation.html
@@ -103,7 +103,7 @@
                     <option value="all">金額で絞らない</option>
                 </select>
                 <span class="cp_sl06_selectbar"></span>
-                <label for="money-narrow" class="cp_sl06_selectlabel">予算で絞る(※口コミをもとに表示)</label>
+                <label for="money-narrow" class="cp_sl06_selectlabel">口コミの予算で絞る</label>
             </div>
             <div class="narrow">
                 <select name="place" id="place-narrow" class="cp_sl06">
