--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,7 @@ html {
 
 body {
   margin: 0;
-  font-family: "游明朝","Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", "メイリオ", "Meiryo", "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+  font-family: "游明朝","ヒラギノ明朝","Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", "メイリオ", "Meiryo", "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
   /* background-color:antiquewhite; */
 }
 
