--- a/static/css/style.css
+++ b/static/css/style.css
@@ -270,6 +270,7 @@ topの設定
     margin: 25px 0px;
   }
   .click_btn [type="submit"] {
+    color: #000;
     width: 80vw;
     border-bottom: 0;
     border-top: 0;
