--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,7 @@ html {
 
 body {
   margin: 0;
-  font-family: "游明朝","ヒラギノ明朝","Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", "メイリオ", "Meiryo", "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+  font-family: "游明朝","serif","Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", "メイリオ", "Meiryo", "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
   /* background-color:antiquewhite; */
 }
 
@@ -1272,6 +1272,8 @@ select {
     font-size: 15px;
   }
   .result_item p {
+    display: inline-block;
+    text-align: center;
     margin: 0 auto;
     font-size: 13px;
   }
