--- a/static/css/style.css
+++ b/static/css/style.css
@@ -82,7 +82,8 @@ span {
   header {
     padding: 0px;
     border-bottom: rgb(191, 189, 189) 1px solid;
-    position: relative; /* メニューの基準位置 */
+    position: relative;
+    font-family:"serif"; /* メニューの基準位置 */
   }
 
   /* ハンバーガーメニューのボタンを表示 */
@@ -149,6 +150,7 @@ main {
 @media (max-width: 480px) {
   main{
     padding: 0px;
+    font-family:"serif";
   }
   .result_main{
     padding-top: 0;
@@ -277,6 +279,7 @@ topの設定
     border-radius: 100vh;
     background: linear-gradient(90deg, rgb(255, 231, 217), rgb(255, 196, 196));
     font-size: 1.3em;
+    font-family:"serif";
   }
   .click_btn h3 {
     margin-bottom: 10px;
@@ -289,6 +292,7 @@ topの設定
     border-bottom: 0;
     border-top: 0;
     font-size: 1.3em;
+    font-family:"serif";
   }
   .click_btn a:hover {
     background: transparent;
@@ -354,6 +358,9 @@ conceptの設定
 }
 
 @media(max-width:480px){
+  .concept {
+    font-family:"serif";
+  }
   .content_back {
     position: absolute;
     top: 0;
@@ -558,6 +565,7 @@ aboutAIの設定
 @media (max-width: 480px){
   .about{
     margin: 15px auto;
+    font-family:"serif";
   }
   .navi_tytle_invert {
     width: 30%;
@@ -660,6 +668,7 @@ functionの設定
   /* 横幅が320px以下の場合に適用するスタイル */
   .function{
     margin: 40px auto;
+    font-family:"serif";
   }
   .function_outline{
     position: relative;
@@ -786,6 +795,7 @@ functionの設定
 @media (max-width:480px) {
   .page_move{
     padding: 0;
+    font-family:"serif";
   }
   .page_move h1 {
     font-size: 1.17em;
