--- a/templates/calculation.html
+++ b/templates/calculation.html
@@ -9,11 +9,14 @@
                 <div class="calc_img"><img src="../static/images/AI_image.jpg" alt=""></div>
                 <div class="calc_func">
                     <h3>ポジネガ度　~AIで感情分析~</h3>
+                    <p class="responsivecalc2">優先度</p>
                     <p>
                         <label>
-                            <span>重視しない</span>
+                            <span class="responsivepc">重視しない</span>
+                            <span class="responsivecalc">　0%</span>
                             <input type="range" class="input-range" name="pozi_nega_rank" min="0" max="1" step="0.01" value="0.5">
-                            <span>重視する</span>
+                            <span class="responsivepc">重視する</span>
+                            <span class="responsivecalc">100%</span>
                         </label>
                     </p>
                 </div>
@@ -22,11 +25,14 @@
                 <div class="calc_img"><img src="../static/images/satisfy_image.jpg" alt=""></div>
                 <div class="calc_func">
                     <h3>レビュー満足度</h3>
+                    <p class="responsivecalc2">優先度</p>
                     <p>
                         <label>
-                            <span>重視しない</span>
+                            <span class="responsivepc">重視しない</span>
+                            <span class="responsivecalc">　0%</span>
                             <input type="range" class="input-range" name="satisfy_rank" min="0" max="1" step="0.01" value="0.5">
-                            <span>重視する</span>
+                            <span class="responsivepc">重視する</span>
+                            <span class="responsivecalc">100%</span>
                         </label>
                     </p>
                 </div>
@@ -35,11 +41,14 @@
                 <div class="calc_img"><img src="../static/images/insta_image.jpg" alt=""></div>
                 <div class="calc_func">
                     <h3>インスタ映え</h3>
+                    <p class="responsivecalc2">優先度</p>
                     <p>
                         <label>
-                            <span>重視しない</span>
+                            <span class="responsivepc">重視しない</span>
+                            <span class="responsivecalc">　0%</span>
                             <input type="range" class="input-range" name="insta_rank" min="0" max="1" step="0.01" value="0.5">
-                            <span>重視する</span>
+                            <span class="responsivepc">重視する</span>
+                            <span class="responsivecalc">100%</span>
                         </label>
                     </p>
                 </div>
@@ -48,11 +57,14 @@
                 <div class="calc_img"><img src="../static/images/calm_image.jpg" alt=""></div>
                 <div class="calc_func">
                     <h3>落ち着き</h3>
+                    <p class="responsivecalc2">優先度</p>
                     <p>
                         <label>
-                            <span>重視しない</span>
+                            <span class="responsivepc">重視しない</span>
+                            <span class="responsivecalc">　0%</span>
                             <input type="range" class="input-range" name="calm_rank" min="0" max="1" step="0.01" value="0.5">
-                            <span>重視する</span>
+                            <span class="responsivepc">重視する</span>
+                            <span class="responsivecalc">100%</span>
                         </label>
                     </p>
                 </div>
@@ -61,11 +73,14 @@
                 <div class="calc_img"><img src="../static/images/service_image.jpg" alt=""></div>
                 <div class="calc_func">
                     <h3>サービス</h3>
+                    <p class="responsivecalc2">優先度</p>
                     <p>
                         <label>
-                            <span>重視しない</span>
+                            <span class="responsivepc">重視しない</span>
+                            <span class="responsivecalc">　0%</span>
                             <input type="range" class="input-range" name="service_rank" min="0" max="1" step="0.01" value="0.5">
-                            <span>重視する</span>
+                            <span class="responsivepc">重視する</span>
+                            <span class="responsivecalc">100%</span>
                         </label>
                     </p>
                 </div>
@@ -74,11 +89,14 @@
                 <div class="calc_img"><img src="../static/images/star_image.jpg" alt=""></div>
                 <div class="calc_func">
                     <h3>食べログ★</h3>
+                    <p class="responsivecalc2">優先度</p>
                     <p>
                         <label>
-                            <span>重視しない</span>
+                            <span class="responsivepc">重視しない</span>
+                            <span class="responsivecalc">　0%</span>
                             <input type="range" class="input-range" name="star_rank" min="0" max="1" step="0.01" value="0.5" >
-                            <span>重視する</span>
+                            <span class="responsivepc">重視する</span>
+                            <span class="responsivecalc">100%</span>
                         </label>
                     </p>
                 </div>
